// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms|media Contentful Image 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__atom"
    >
      <img
        alt="An example image"
        class="img--contain img--loading"
        src="https://images.ctfassets.net/yadj1kx9rmg0/wtrHxeu3zEoEce2MokCSi/cf6f68efdcf625fdc060607df0f3baef/quwowooybuqbl6ntboz3.jpg?w=20&fit=fill&f=center&fm=png"
      />
       
      <div
        style="height: 110vh;"
      />
       
      <img
        alt="An example image"
        class="img--contain img--loading"
        src="https://images.ctfassets.net/yadj1kx9rmg0/wtrHxeu3zEoEce2MokCSi/cf6f68efdcf625fdc060607df0f3baef/quwowooybuqbl6ntboz3.jpg?w=20&fit=fill&f=center&q=65&fm=jpg"
      />
    </section>
  </section>
</section>
`;

exports[`Storyshots Atoms|media Images 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__atom"
    >
      <picture
        alt="image rectangle alt text empty"
        class="img--responsive"
      >
        <!---->
         
        <!---->
         
        <source
          media="(min-width: 768px)"
          srcset="/generator/svg/400/400"
        />
         
        <!---->
         
        <!---->
         
        <source
          media="(max-width: 480px)"
          srcset="/generator/svg/400/400"
        />
         
        <img
          alt=""
          class="img--responsive img--lazy"
          src=""
        />
      </picture>
    </section>
  </section>
</section>
`;

exports[`Storyshots Atoms|media Youtube Video 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__atom"
    >
      <div
        class="youtube-video"
      >
        <!---->
      </div>
    </section>
  </section>
</section>
`;
